Update kotlinx.collections.immutable to 0.3.3
Apart from updating the version of the library, repackages the Kotlin compiler JAR to exclude older version of the kotlinx.collections.immutable in integration tests

Verified by running `./gradlew :compose:compiler:compiler-hosted:integration-tests:testDebugUnitTest`

Change-Id: I50736297cab85b4ea8d2f4006e2de74930b0d77b

--- a/compiler/compiler-hosted/integration-tests/build.gradle
+++ b/compiler/compiler-hosted/integration-tests/build.gradle
@@ -33,7 +33,11 @@ dependencies {
     testImplementation(JUNIT)
     testImplementation(ROBOLECTRIC)
 
-    testImplementation("org.jetbrains.kotlin:kotlin-compiler:$KOTLIN_VERSION")
+    testImplementation(
+        project(
+           ":compose:compiler:compiler-hosted:integration-tests:kotlin-compiler-repackaged"
+        )
+    )
 
     testImplementation(KOTLIN_STDLIB)
     testImplementation(project(":compose:androidview:androidview"))
