--- a/ui/ui-tooling-data/build.gradle
+++ b/ui/ui-tooling-data/build.gradle
@@ -35,30 +35,25 @@ dependencies {
 
     api(project(":compose:runtime:runtime"))
     api(project(":compose:ui:ui"))
-    api(project(":compose:ui:ui-tooling-data"))
-    implementation(project(":compose:material:material"))
-
-    // kotlin-reflect and tooling-animation-internal are provided by Studio at runtime
-    compileOnly(project(":ui:ui-animation-tooling-internal"))
-    compileOnly(KOTLIN_REFLECT)
 
     androidTestImplementation project(":compose:ui:ui-test-junit4")
 
     androidTestImplementation(JUNIT)
     androidTestImplementation(ANDROIDX_TEST_RUNNER)
     androidTestImplementation(ANDROIDX_TEST_RULES)
-    androidTestImplementation project(":compose:foundation:foundation-layout")
-    androidTestImplementation project(":compose:foundation:foundation")
+
     androidTestImplementation(TRUTH)
-    androidTestImplementation(KOTLIN_REFLECT)
-    androidTestImplementation(project(":ui:ui-animation-tooling-internal"))
+    androidTestImplementation(project(":compose:foundation:foundation-layout"))
+    androidTestImplementation(project(":compose:foundation:foundation"))
+    androidTestImplementation(project(":compose:material:material"))
 }
 
 androidx {
-    name = "Compose Tooling"
+    name = "Compose Tooling Data"
     publish = Publish.SNAPSHOT_AND_RELEASE
     mavenGroup = LibraryGroups.Compose.UI
-    inceptionYear = "2019"
-    description = "Compose tooling library. This library exposes information to our tools for better IDE support."
+    inceptionYear = "2021"
+    description = "Compose tooling library data. This library provides data about compose" +
+            " for different tooling purposes."
     legacyDisableKotlinStrictApiMode = true
 }
