Move ComponentActivity.setContent
to the new androidx.activity:activity-compose module. Once the
deprecated old method is removed, androidx.compose.ui:compose-ui no
longer needs to depend on androidx.activity:activity.

Test: Existing tests
Relnote: "ComponentActivity.setContent has moved to
androidx.activity.compose.setContent in the
androidx.activity:activity-compose module."

Change-Id: Icf4168e6078b87ce746569a946b2a90274197c72

--- a/androidview/androidview/integration-tests/androidview-demos/build.gradle
+++ b/androidview/androidview/integration-tests/androidview-demos/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     implementation project(":compose:material:material")
     implementation project(":compose:runtime:runtime")
     implementation project(":compose:ui:ui")
+    implementation projectOrArtifact(":activity:activity-compose")
     implementation "androidx.fragment:fragment-ktx:1.2.5"
 }
