--- a/runtime/runtime/compose-runtime-benchmark/build.gradle
+++ b/runtime/runtime/compose-runtime-benchmark/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     androidTestImplementation(KOTLIN_REFLECT)
     androidTestImplementation(project(":benchmark:benchmark-junit4"))
     androidTestImplementation "androidx.activity:activity:1.2.0-alpha02"
+    androidTestImplementation project(":activity:activity-compose")
 }
