--- a/foundation/foundation-layout/build.gradle
+++ b/foundation/foundation-layout/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
         androidTestImplementation project(":compose:foundation:foundation")
         androidTestImplementation project(":compose:ui:ui-test-junit4")
+        androidTestImplementation project(":activity:activity-compose")
         androidTestImplementation(ANDROIDX_TEST_RULES)
         androidTestImplementation(ANDROIDX_TEST_RUNNER)
         androidTestImplementation(JUNIT)
@@ -95,6 +96,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
             androidAndroidTest.dependencies {
                 implementation project(":compose:foundation:foundation")
                 implementation project(":compose:ui:ui-test-junit4")
+                implementation project(":activity:activity-compose")
 
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
