--- a/integration-tests/docs-snippets/build.gradle
+++ b/integration-tests/docs-snippets/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation project(":compose:ui:ui-tooling")
     implementation project(":compose:ui:ui-viewbinding")
     implementation project(":navigation:navigation-compose")
+    implementation project(":activity:activity-compose")
 
 
     implementation(KOTLIN_STDLIB)
