--- a/material/material/integration-tests/material-demos/build.gradle
+++ b/material/material/integration-tests/material-demos/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation project(":compose:runtime:runtime")
     implementation project(":compose:ui:ui")
     implementation project(":compose:ui:ui-text")
+    implementation project(":activity:activity-compose")
 }
 
 androidx {
