--- a/runtime/runtime-saveable/build.gradle
+++ b/runtime/runtime-saveable/build.gradle
@@ -49,6 +49,7 @@ dependencies {
         androidTestImplementation project(':compose:ui:ui')
         androidTestImplementation project(":compose:ui:ui-test-junit4")
         androidTestImplementation "androidx.fragment:fragment:1.3.0-alpha05"
+        androidTestImplementation project(":activity:activity-compose")
         androidTestImplementation(ANDROIDX_TEST_UIAUTOMATOR)
         androidTestImplementation(ANDROIDX_TEST_CORE)
         androidTestImplementation(ANDROIDX_TEST_RULES)
@@ -96,6 +97,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 implementation project(':compose:ui:ui')
                 implementation project(":compose:ui:ui-test-junit4")
                 implementation "androidx.fragment:fragment:1.3.0-alpha05"
+                implementation project(":activity:activity-compose")
                 implementation(ANDROIDX_TEST_UIAUTOMATOR)
                 implementation(ANDROIDX_TEST_CORE)
                 implementation(ANDROIDX_TEST_RULES)
