--- a/runtime/runtime/integration-tests/build.gradle
+++ b/runtime/runtime/integration-tests/build.gradle
@@ -14,8 +14,10 @@
  * limitations under the License.
  */
 
+
 import androidx.build.AndroidXUiPlugin
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 import static androidx.build.dependencies.DependenciesKt.*
 
 plugins {
@@ -33,6 +35,7 @@ dependencies {
         androidTestImplementation(project(":compose:ui:ui"))
         androidTestImplementation project(":compose:ui:ui-test-junit4")
         androidTestImplementation(project(":compose:runtime:runtime"))
+        androidTestImplementation(project(":activity:activity-compose"))
 
         androidTestImplementation(JUNIT)
         androidTestImplementation(KOTLIN_TEST_JUNIT)
@@ -87,6 +90,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
             androidAndroidTest.dependencies {
                 implementation(project(":compose:ui:ui"))
                 implementation project(":compose:ui:ui-test-junit4")
+                implementation project(":activity:activity-compose")
                 implementation(ANDROIDX_TEST_EXT_JUNIT)
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
