--- a/test-utils/build.gradle
+++ b/test-utils/build.gradle
@@ -45,6 +45,7 @@ dependencies {
         implementation project(":benchmark:benchmark-junit4")
         implementation project(":compose:runtime:runtime")
         implementation project(":compose:ui:ui")
+        implementation project(":activity:activity-compose")
         implementation(ANDROIDX_TEST_RULES)
 
         // This has stub APIs for access to legacy Android APIs, so we don't want
@@ -76,6 +77,7 @@ if (AndroidXUiPlugin.isMultiplatformEnabled(project)) {
 
             androidMain.dependencies {
                 api "androidx.activity:activity:1.2.0-alpha02"
+                implementation project(":activity:activity-compose")
                 api project(":compose:ui:ui-test-junit4")
                 api project(":test-screenshot")
                 // This has stub APIs for access to legacy Android APIs, so we don't want
