--- a/ui/ui-test-junit4/build.gradle
+++ b/ui/ui-test-junit4/build.gradle
@@ -44,6 +44,7 @@ dependencies {
         implementation(ESPRESSO_CORE)
         implementation project(":compose:animation:animation")
         implementation project(":compose:foundation:foundation")
+        implementation project(":activity:activity-compose")
 
         testImplementation(TRUTH)
 
@@ -83,6 +84,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 api(JUNIT)
                 api(ANDROIDX_TEST_EXT_JUNIT)
                 api "androidx.activity:activity:1.2.0-alpha02"
+                implementation project(":activity:activity-compose")
 
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
