Move Swing dependency out of runtime
The runtime is agnostic to a GUI framework.

Test: ANDROIDX_PROJECTS=COMPOSE ./gradlew bOS
Change-Id: I21f279d61d1765dfef024687472a677dc08a3578

--- a/ui/ui/build.gradle
+++ b/ui/ui/build.gradle
@@ -165,7 +165,12 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
             }
 
             androidMain.dependsOn jvmMain
-            desktopMain.dependsOn jvmMain
+            desktopMain {
+                dependencies {
+                    api(KOTLIN_COROUTINES_SWING)
+                }
+                dependsOn jvmMain
+            }
 
             test.dependencies {
                 implementation(ANDROIDX_TEST_RULES)
