--- a/ui/ui/build.gradle
+++ b/ui/ui/build.gradle
@@ -53,7 +53,7 @@ dependencies {
         api "androidx.annotation:annotation:1.1.0"
 
         // TODO: Remove this when removing the deprecated ComponentActivity.setContent extension
-        api "androidx.activity:activity:1.2.0-alpha02"
+        api project(":activity:activity-ktx")
 
         // This has stub APIs for access to legacy Android APIs, so we don't want
         // any dependency on this module.
@@ -151,7 +151,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 // any dependency on this module.
                 compileOnly project(":compose:ui:ui-android-stubs")
                 api "androidx.annotation:annotation:1.1.0"
-                api "androidx.activity:activity:1.2.0-alpha02"
+                api project(":activity:activity-ktx")
                 implementation "androidx.autofill:autofill:1.0.0"
                 implementation(KOTLIN_COROUTINES_ANDROID)
 
