Move viewModel() and LocalViewModelStoreOwner from compose:ui:ui to a lifecycle:lifecycle-viewmodel-compose
Relnote: viewModel() composable and LocalViewModelStoreOwner were moved to androidx.lifecycle.viewmodel.compose. You will now need to add a separate dependency androidx.lifecycle:lifecycle-viewmodel.compose:1.0.0-alpha01 in order to use it.
Test: moved existing tests
Change-Id: I7a374b76168a6387e585337c131a988bddcb912b

--- a/integration-tests/docs-snippets/build.gradle
+++ b/integration-tests/docs-snippets/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation project(":compose:ui:ui-viewbinding")
     implementation project(":navigation:navigation-compose")
     implementation project(":activity:activity-compose")
+    implementation project(":lifecycle:lifecycle-viewmodel-compose")
 
 
     implementation(KOTLIN_STDLIB)
