--- a/runtime/runtime-saveable/build.gradle
+++ b/runtime/runtime-saveable/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
         androidTestImplementation project(':compose:ui:ui')
         androidTestImplementation project(":compose:ui:ui-test-junit4")
-        androidTestImplementation "androidx.fragment:fragment:1.3.0-alpha05"
+        androidTestImplementation "androidx.fragment:fragment:1.3.0-rc02"
         androidTestImplementation project(":activity:activity-compose")
         androidTestImplementation(ANDROIDX_TEST_UIAUTOMATOR)
         androidTestImplementation(ANDROIDX_TEST_CORE)
@@ -96,7 +96,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
             androidAndroidTest.dependencies {
                 implementation project(':compose:ui:ui')
                 implementation project(":compose:ui:ui-test-junit4")
-                implementation "androidx.fragment:fragment:1.3.0-alpha05"
+                implementation "androidx.fragment:fragment:1.3.0-rc02"
                 implementation project(":activity:activity-compose")
                 implementation(ANDROIDX_TEST_UIAUTOMATOR)
                 implementation(ANDROIDX_TEST_CORE)
