--- a/ui/ui/build.gradle
+++ b/ui/ui/build.gradle
@@ -69,8 +69,8 @@ dependencies {
         // used if the user adds these dependencies as otherwise AppCompatActivity and Fragment
         // will not propagate ViewTree*Owners we are relying on and we will crash.
         // TODO: remove these dependencies at some point: b/161814404
-        implementation "androidx.fragment:fragment:1.3.0-alpha07"
-        implementation "androidx.appcompat:appcompat:1.3.0-alpha01"
+        implementation "androidx.fragment:fragment:1.3.0-rc02"
+        implementation "androidx.appcompat:appcompat:1.3.0-beta01"
 
         testImplementation(ANDROIDX_TEST_RULES)
         testImplementation(ANDROIDX_TEST_RUNNER)
