--- a/ui/ui-inspection/src/androidTest/AndroidManifest.xml
+++ b/ui/ui-inspection/src/androidTest/AndroidManifest.xml
@@ -17,5 +17,7 @@
 
     <application>
         <activity android:name="androidx.compose.ui.inspection.testdata.ParametersTestActivity" />
+        <activity android:name="androidx.compose.ui.inspection.testdata.TestActivity"
+            android:theme="@style/TestTheme"/>
     </application>
 </manifest>
