--- a/animation/animation/build.gradle
+++ b/animation/animation/build.gradle
@@ -86,6 +86,10 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 api "androidx.annotation:annotation:1.1.0"
             }
 
+            desktopMain.dependencies {
+                implementation(KOTLIN_STDLIB)
+            }
+
             androidTest.dependencies {
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
