--- a/compiler/settings.gradle
+++ b/compiler/settings.gradle
@@ -21,6 +21,7 @@ setupPlayground(this, "../..")
 selectProjectsFromAndroidX({ name ->
     if (name.startsWith(":compose:compiler")) return true
     if (name == ":compose:androidview:androidview") return true
+    if (name == ":compose:internal-lint-checks") return true
     return false
 })
 
