--- a/ui/ui-tooling/build.gradle
+++ b/ui/ui-tooling/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     api(project(":compose:ui:ui"))
     api(project(":compose:ui:ui-tooling-data"))
     implementation(project(":compose:material:material"))
-    implementation(project(":activity:activity-compose"))
+    implementation "androidx.activity:activity-ktx:1.2.0"
 
     // kotlin-reflect and tooling-animation-internal are provided by Studio at runtime
     compileOnly(project(":ui:ui-animation-tooling-internal"))
