Added a demo where a classic view transfers focus to a Compose View
This demo demonstrates a workaround while we
investigate how a child can be notified when
a parent gains focus.

Bug: 179817158
Test: N/A
Change-Id: I96bb5da361fe74a0be41a8ede40c551a7735f96b

--- a/androidview/androidview/integration-tests/androidview-demos/build.gradle
+++ b/androidview/androidview/integration-tests/androidview-demos/build.gradle
@@ -24,6 +24,7 @@ plugins {
 }
 
 dependencies {
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     kotlinPlugin project(":compose:compiler:compiler")
 
     implementation(KOTLIN_STDLIB)
