--- a/ci/compose-uber-jar/gradle.properties
+++ b/ci/compose-uber-jar/gradle.properties
@@ -1,3 +1,3 @@
 # __LATEST_COMPOSE_RELEASE_VERSION__
-compose.version=0.2.0-build132
+compose.version=0.0.0-unmerged-build37
 kotlin.code.style=official
