--- a/ui/ui/build.gradle
+++ b/ui/ui/build.gradle
@@ -62,12 +62,9 @@ dependencies {
         implementation("androidx.autofill:autofill:1.0.0")
         implementation(KOTLIN_COROUTINES_ANDROID)
 
-        // we don't use these dependencies but we need to ensure at least these versions are
-        // used if the user adds these dependencies as otherwise AppCompatActivity and Fragment
-        // will not propagate ViewTree*Owners we are relying on and we will crash.
-        // TODO: remove these dependencies at some point: b/161814404
-        implementation("androidx.fragment:fragment:1.3.0")
-        implementation("androidx.appcompat:appcompat:1.3.0-beta01")
+        implementation("androidx.savedstate:savedstate:1.1.0")
+        implementation("androidx.lifecycle:lifecycle-runtime:2.3.0")
+        implementation("androidx.lifecycle:lifecycle-viewmodel:2.3.0")
 
         testImplementation(ANDROIDX_TEST_RULES)
         testImplementation(ANDROIDX_TEST_RUNNER)
@@ -82,8 +79,6 @@ dependencies {
         testImplementation(project(":compose:ui:ui-test-junit4"))
         testImplementation(project(":compose:test-utils"))
 
-        androidTestImplementation("androidx.fragment:fragment:1.3.0")
-        androidTestImplementation("androidx.appcompat:appcompat:1.1.0")
         androidTestImplementation(ANDROIDX_TEST_UIAUTOMATOR)
         androidTestImplementation(ANDROIDX_TEST_RULES)
         androidTestImplementation(ANDROIDX_TEST_RUNNER)
@@ -108,6 +103,8 @@ dependencies {
         androidTestImplementation("androidx.recyclerview:recyclerview:1.1.0")
         androidTestImplementation("androidx.core:core-ktx:1.1.0")
         androidTestImplementation(project(":activity:activity-compose"))
+        androidTestImplementation("androidx.appcompat:appcompat:1.3.0-beta01")
+        androidTestImplementation("androidx.fragment:fragment:1.3.0")
 
         lintChecks(project(":compose:ui:ui-lint"))
         lintPublish(project(":compose:ui:ui-lint"))
@@ -151,12 +148,9 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 implementation("androidx.autofill:autofill:1.0.0")
                 implementation(KOTLIN_COROUTINES_ANDROID)
 
-                // we don't use these dependencies but we need to ensure at least these versions are
-                // used if the user adds these dependencies as otherwise AppCompatActivity and Fragment
-                // will not propagate ViewTree*Owners we are relying on and we will crash.
-                // TODO: remove these dependencies at some point: b/161814404
-                implementation("androidx.fragment:fragment:1.3.0")
-                implementation("androidx.appcompat:appcompat:1.3.0-beta01")
+                implementation("androidx.savedstate:savedstate:1.1.0")
+                implementation("androidx.lifecycle:lifecycle-runtime:2.3.0")
+                implementation("androidx.lifecycle:lifecycle-viewmodel:2.3.0")
             }
 
             jvmMain.dependencies {
@@ -188,7 +182,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
 
             androidAndroidTest.dependencies {
                 implementation("androidx.fragment:fragment:1.3.0")
-                implementation("androidx.appcompat:appcompat:1.1.0")
+                implementation("androidx.appcompat:appcompat:1.3.0-beta01")
                 implementation(ANDROIDX_TEST_UIAUTOMATOR)
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
