Set dock and menu names on macOS
Resolves #246

--- a/gradle-plugins/compose/src/test/test-projects/application/jvm/build.gradle
+++ b/gradle-plugins/compose/src/test/test-projects/application/jvm/build.gradle
@@ -46,6 +46,9 @@ compose.desktop {
                 menuGroup = "compose"
                 upgradeUuid = "2d6ff464-75be-40ad-a256-56420b9cc374"
             }
+            macOS {
+                dockName = "CustomDockName"
+            }
         }
     }
 }
