--- a/ui/ui-test/build.gradle
+++ b/ui/ui-test/build.gradle
@@ -32,27 +32,25 @@ AndroidXUiPlugin.applyAndConfigureKotlinPlugin(project)
 dependencies {
     kotlinPlugin(project(":compose:compiler:compiler"))
 
-    if(!AndroidXUiPlugin.isMultiplatformEnabled(project)) {
+    if (!AndroidXUiPlugin.isMultiplatformEnabled(project)) {
+        api(project(":compose:runtime:runtime"))
         api(project(":compose:ui:ui"))
         api(project(":compose:ui:ui-graphics"))
-        api(project(":compose:ui:ui-geometry"))
         api(project(":compose:ui:ui-text"))
         api(project(":compose:ui:ui-unit"))
-        api(project(":compose:ui:ui-util"))
-        api(project(":compose:runtime:runtime"))
+        api(KOTLIN_COROUTINES_CORE)
         api(KOTLIN_COROUTINES_TEST)
+        api(KOTLIN_STDLIB)
+        api(KOTLIN_STDLIB_COMMON)
 
-        implementation(KOTLIN_STDLIB)
+        implementation(project(":compose:ui:ui-util"))
+        implementation("androidx.annotation:annotation:1.1.0")
         implementation(ESPRESSO_CORE)
-        implementation("androidx.collection:collection:1.1.0")
-        implementation(project(":compose:runtime:runtime"))
 
-        testImplementation(TRUTH)
-
-        androidTestImplementation(project(':compose:material:material'))
-        androidTestImplementation(project(':compose:test-utils'))
-        androidTestImplementation(project(':compose:ui:ui-test-junit4'))
         androidTestImplementation(project(":activity:activity-compose"))
+        androidTestImplementation(project(":compose:material:material"))
+        androidTestImplementation(project(":compose:test-utils"))
+        androidTestImplementation(project(":compose:ui:ui-test-junit4"))
         androidTestImplementation(TRUTH)
         androidTestImplementation(MOCKITO_CORE, libs.exclude_bytebuddy) // DexMaker has it"s own MockMaker
         androidTestImplementation(DEXMAKER_MOCKITO, libs.exclude_bytebuddy) // DexMaker has it"s own MockMaker
@@ -63,7 +61,7 @@ dependencies {
 }
 
 
-if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
+if (AndroidXUiPlugin.isMultiplatformEnabled(project)) {
     kotlin {
         android()
         jvm("desktop")
@@ -71,39 +69,33 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
         sourceSets {
             commonMain.dependencies {
                 api(project(":compose:ui:ui"))
-                api(project(":compose:ui:ui-geometry"))
                 api(project(":compose:ui:ui-text"))
                 api(project(":compose:ui:ui-unit"))
-                api(project(":compose:ui:ui-util"))
+                api(KOTLIN_STDLIB)
 
-                api(KOTLIN_COROUTINES_TEST)
-
-                implementation(KOTLIN_STDLIB_COMMON)
-                implementation(project(":compose:runtime:runtime"))
+                implementation(project(":compose:ui:ui-util"))
             }
 
             jvmMain.dependencies {
-                implementation("androidx.collection:collection:1.1.0")
+                api(project(":compose:runtime:runtime"))
+                api(KOTLIN_COROUTINES_CORE)
+                api(KOTLIN_COROUTINES_TEST)
+                api(KOTLIN_STDLIB_COMMON)
             }
 
             androidMain.dependencies {
-                api(project(":compose:runtime:runtime"))
                 api(project(":compose:ui:ui-graphics"))
 
+                implementation("androidx.annotation:annotation:1.1.0")
                 implementation(ESPRESSO_CORE)
             }
 
-            test.dependencies {
-                implementation(TRUTH)
-            }
-
             androidAndroidTest.dependencies {
-                implementation(TRUTH)
                 implementation(project(":compose:material:material"))
                 implementation(project(":compose:test-utils"))
                 implementation(project(":compose:ui:ui-test-junit4"))
                 implementation(project(":activity:activity-compose"))
-
+                implementation(TRUTH)
                 implementation(MOCKITO_CORE, libs.exclude_bytebuddy) // DexMaker has it"s own MockMaker
                 implementation(DEXMAKER_MOCKITO, libs.exclude_bytebuddy) // DexMaker has it"s own MockMaker
                 implementation(MOCKITO_KOTLIN, {
@@ -117,6 +109,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 implementation(SKIKO)
             }
 
+            androidMain.dependsOn(jvmMain)
             desktopMain.dependsOn(jvmMain)
             jvmMain.dependsOn(commonMain)
         }
